# cyphal.rs

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  travis.sh
.github/workflows/: build.yaml  lint.yaml  test.yaml
benching/no_std/: .gitignore  Cargo.toml  README.md
benching/no_std/src/: allocator.rs  board.rs  clock.rs  context.rs  logging.rs  main.rs  stats.rs
benching/no_std/src/benching/: bencher.rs  mod.rs  report.rs  runner.rs  stats.rs  watch.rs
benching/no_std/src/boards/: mod.rs  stm32g4.rs
benching/no_std/src/suit/: context.rs  mod.rs  receive.rs  send.rs  test.rs
cyphal/: Cargo.toml  interop_tests.py  setup_vcan.sh
cyphal/src/: crc16.rs  lib.rs  node.rs  transfer.rs  types.rs
cyphal/src/session/: heap_based.rs  mod.rs
cyphal/src/transport/: mod.rs
cyphal/src/transport/can/: bitfields.rs  fd.rs  legacy.rs  mod.rs
dsdl/: Cargo.toml  README.md  build.rs
dsdl/src/: lib.rs  parse.rs
dsdl/tests/: test.rs
dsdl_compiler/: Cargo.toml  README.md
dsdl_compiler/src/: config.rs  lib.rs  parse.rs
dsdl_compiler/tests/: dsdl.rs
dsdl_parser/: CHANGELOG.md  Cargo.toml  README.md  build.rs  travis.sh
dsdl_parser/src/: crc.rs  display.rs  lexer.rs  lib.rs  normalize.rs  parse.rs  parser.lalrpop  parser.rs  signature.rs
dsdl_parser/src/ast/: array.rs  attribute_definition.rs  cast_mode.rs  comment.rs  directive.rs  dsdl.rs  file.rs  file_name.rs  ident.rs  line.rs  lit.rs  mod.rs  ty.rs  type_definition.rs
dsdl_parser/src/parser/: error.rs  lexer.rs  mod.rs  parser.lalrpop  parser.rs
dsdl_parser/tests/: dsdl.rs
examples/basic/: .gitignore  Cargo.toml  README.md  external_node.py  setup_can.sh
examples/basic/src/: main.rs
examples/embedded/: .gitignore  Cargo.toml  README.md  STM32G431xx.svd  create_call_stack_graph.sh  gen_asm.sh  memory.x  openocd.gdb
examples/embedded/.cargo/: config.toml
examples/embedded/data/: print.py  print_measures.py  rust_receive_7byte copy.csv
examples/embedded/src/: allocator.rs  clock.rs  logging.rs  main.rs  main_echo_node.rs  main_measures.rs  setup_hal.rs  stack_analysis.rs  to_test.rs  util.rs  watch.rs
src/: can_frame.rs  crc.rs  frame_generator.rs  header_macros.rs  headers.rs  lib.rs  message_builder.rs  parser.rs  serializer.rs  types.rs  uavcan_frame.rs
uavcan/: Cargo.toml  interop_tests.py
uavcan-derive/: Cargo.toml
uavcan-derive/src/: lib.rs
uavcan-indexable-derive/: Cargo.toml
uavcan-indexable-derive/src/: lib.rs
uavcan/src/: crc.rs  crc16.rs  deserializer.rs  frame_assembler.rs  frame_disassembler.rs  frame_generator.rs  framing.rs  header.rs  header_macros.rs  internal.rs  lib.rs  message_builder.rs  node.rs  parser.rs  serializer.rs  session.rs  storage.rs  time.rs  transfer.rs  transport.rs  types.rs
uavcan/src/session/: heap_based.rs  mod.rs  pool_vec.rs  std_vec.rs
uavcan/src/storage/: heap_storage.rs  mod.rs
uavcan/src/transport/: can.rs  mod.rs
uavcan/src/transport/can/: bitfields.rs  fake_payload.rs  fd.rs  legacy.rs  mod.rs  tests.rs
uavcan/src/versioning/: mod.rs
uavcan/src/versioning/version0/: deframer.rs  framer.rs  mod.rs
