[package]
name = "dsdl"
version = "0.0.0"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]

build = "build.rs"

description = "A crate that conviniently integrates the DSDL compiler (dsdlc) with cargo/crates.io"
homepage = "http://uavcan.org/Specification/3._Data_structure_description_language/"
repository = "https://github.com/UAVCAN/uavcan.rs/tree/master/dsdl"
readme = "README.md"

keywords = ["uavcan", "can", "dsdl", "parser", "dsdlc"]
categories = []

license = "Apache-2.0/MIT"

[dependencies]
uavcan = {path = "../uavcan", default-features=false}

[build-dependencies]
quote = "0.3"
dsdl_compiler = {path = "../dsdl_compiler"}

[badges]
travis-ci = {repository = "UAVCAN/uavcan.rs", branch = "master"}
maintenance = {status = "actively-developed"}