[package]
name = "dsdl_parser"
version = "0.1.3"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]

description = "A nom parser for the DSDL (Data structure description language) used when transmiting over uavcan"
homepage = "http://uavcan.org/Specification/3._Data_structure_description_language/"
repository = "https://github.com/UAVCAN/uavcan.rs/tree/master/dsdl_parser"
readme = "README.md"

keywords = ["uavcan", "can", "dsdl", "parser"]
categories = ["parser-implementations"]

license = "Apache-2.0/MIT"

[dependencies]
nom = "^3.2"
log = "^0.3.8"

[dev-dependencies]
test-logger = "0.1.0"

[badges]
travis-ci = {repository = "UAVCAN/uavcan.rs", branch = "master"}
maintenance = {status = "actively-developed"}