[package]
name = "uavcan-derive"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
version = "0.0.1"

repository = "https://github.com/kjetilkjeka/uavcan-core.rs/tree/master/uavcan-derive"

keywords = ["uavcan", "can", "uav", "embedded"]

license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.10.5"
quote = "0.3.10"