[package]
name = "uavcan-derive"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
version = "0.1.0-preview0"

description = "Makes it possible to derive Uavcan related types"

repository = "https://github.com/UAVCAN/uavcan.rs"

keywords = ["uavcan", "can", "uav", "embedded"]

license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.10"
regex = "0.2"