[package]
name = "uavcan"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
version = "0.0.1"

description = "The primary (core) part of the uavcan implementation in rust. Core is also fitting as this crate is and always will be no_std"

repository = "https://github.com/kjetilkjeka/uavcan.rs"

keywords = ["uavcan", "can", "uav", "embedded"]
categories = ["no-std", "embedded"]

license = "Apache-2.0/MIT"

[features]
default = ["std"]
std = ["ux/std", "half/std"]

[workspace]

[dependencies]
bit_field = "0.8.0"
uavcan-derive = {path = "../uavcan-derive"}
embedded_types = "0.3.0"

[dependencies.half]
version = "1.0.0"
default-features = false

[dependencies.ux]
version = "0.0.1"
default-features = false
