[package]
name = "uavcan"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
version = "0.1.0-preview0"

description = "Full functionality reference implementation of uavcan in Rust"

repository = "https://github.com/UAVCAN/uavcan.rs"
homepage = "https://uavcan.org/Implementations/Uavcan.rs/"

readme = "README.md"

keywords = ["uavcan", "can", "uav", "embedded"]
categories = ["no-std", "embedded"]

license = "Apache-2.0/MIT"

[features]
default = []
std = ["ux/std", "half/std"]

[workspace]

[dependencies]
bit_field = "0.8.0"
uavcan-derive = "0.1.0-preview0"
embedded_types = "0.3.0"

[dependencies.half]
version = "1.0.0"
default-features = false

[dependencies.ux]
version = "0.0.1"
default-features = false
