[package]
name = "uavcan"
authors = ["David Lenfesty <lenfesty@ualberta.ca>"]
version = "0.2.0-preview0"
edition = "2018"

description = "Full functionality reference implementation of UAVCAN/CAN in Rust"

repository = "https://github.com/davidlenfesty/uavcan.rs"

readme = "README.md"

keywords = ["uavcan", "can", "uav", "embedded"]
categories = ["no-std", "embedded"]

license = "Apache-2.0/MIT"

# Most of these are temporary until I replace the functionality I need from them
[dependencies]
num-derive = "0.3"
bitfield = "0.13"


embedded-time = "0.12.0"

# should only in no_std, so if feature std not set - ref: https://github.com/rust-lang/cargo/issues/1839
heapless = "0.7.7"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[dependencies.arrayvec]
version = "0.5.2"
default-features = false

[dev-dependencies]
mock_instant = { version = "0.2", features = ["sync"] }
crc-any = "2.3.5"

[features]
default = []
std = []
