[package]
name = "basic"
version = "0.1.0"
authors = ["David Lenfesty <lenfesty@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "1.7.0"
arrayvec = "0.5.2"
embedded-time = "0.12.0"

[dependencies.uavcan]
path = "../../uavcan"
features = ["std"]

# to use example in outer workspace (because of std feature collision in dev)
[workspace]
members = []
