[package]
name = "basic"
version = "0.1.0"
authors = ["David Lenfesty <lenfesty@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "1.7.0"
arrayvec = "0.5.2"
embedded-time = "0.12.0"

# TODO: if new embedded-hal version releases, this can be changed to crates.io
embedded-hal = {version = "0.2.6", git = "https://github.com/rust-embedded/embedded-hal/", branch = "v0.2.x"}
streaming-iterator = "0.1.5"

[dependencies.uavcan]
path = "../../uavcan"
features = ["std"]

# idk what to do with workspaces
[workspace]
